[LAB 3] Full coverage and report

--- a/Lab 3/Lab3_model/slcov_output/harness/CoverageDetails/harness_cov.html
+++ b/Lab 3/Lab3_model/slcov_output/harness/CoverageDetails/harness_cov.html
@@ -98,38 +98,14 @@
 
   <tr> 
      <td  align="left"> <a name="ref_trace_T1">T1</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '7ee38e87-0e91-4c35-9032-ee4f6c56163a', 'RE', 'harness');">Run 1</a> </td>
-     <td  align="left"> 20-May-2023 11:49:45 </td>
+     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', 'a5a248ef-9839-449f-a6b1-3fd812c0a1a2', 'RE', 'harness');">Run 8</a> </td>
+     <td  align="left"> 20-May-2023 12:32:49 </td>
 </tr>
 
   <tr> 
      <td  align="left"> <a name="ref_trace_T2">T2</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '5260aa93-ae1c-41ad-b225-b733b7085a5a', 'RE', 'harness');">Run 2</a> </td>
-     <td  align="left"> 20-May-2023 12:08:44 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T3">T3</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '21fc58bc-8462-4c46-ac26-f237f3ba37cf', 'RE', 'harness');">Run 3</a> </td>
-     <td  align="left"> 20-May-2023 12:10:26 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T4">T4</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '2e17cdd1-d674-4436-9412-cecf5ce0cac4', 'RE', 'harness');">Run 4</a> </td>
-     <td  align="left"> 20-May-2023 12:11:35 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T5">T5</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '443ea471-524d-4eaf-a7d5-20b0cad9b33f', 'RE', 'harness');">Run 5</a> </td>
-     <td  align="left"> 20-May-2023 12:18:21 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T6">T6</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '76eb986c-95fa-4f83-9e53-c82d2578c3e1', 'RE', 'harness');">Run 6</a> </td>
-     <td  align="left"> 20-May-2023 12:19:44 </td>
+     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '1f6c3bd8-02ad-4ab6-a153-16c3da3baecd', 'RE', 'harness');">Run 9</a> </td>
+     <td  align="left"> 20-May-2023 12:37:48 </td>
 </tr>
 
 </table>
@@ -373,7 +349,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27612/27612<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12104/12104<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -414,7 +390,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27612/27612<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12104/12104<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -455,7 +431,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -496,7 +472,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -537,7 +513,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -578,7 +554,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -619,7 +595,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -660,7 +636,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -701,7 +677,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -742,7 +718,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -783,7 +759,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -824,7 +800,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -895,7 +871,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -964,7 +940,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1005,7 +981,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1076,7 +1052,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1145,7 +1121,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1186,7 +1162,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1257,7 +1233,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1326,7 +1302,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1367,7 +1343,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1438,7 +1414,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1507,7 +1483,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1548,7 +1524,7 @@ Stair3</a></font> </td>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 282/282<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 123/123<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
