--- a/Lab 3/Lab3_model/slcov_output/harness/CoverageDetails/plant_cov.html
+++ b/Lab 3/Lab3_model/slcov_output/harness/CoverageDetails/plant_cov.html
@@ -98,38 +98,14 @@
 
   <tr> 
      <td  align="left"> <a name="ref_trace_T1">T1</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '7ee38e87-0e91-4c35-9032-ee4f6c56163a', 'RE', 'harness');">Run 1</a> </td>
-     <td  align="left"> 20-May-2023 11:49:45 </td>
+     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', 'a5a248ef-9839-449f-a6b1-3fd812c0a1a2', 'RE', 'harness');">Run 8</a> </td>
+     <td  align="left"> 20-May-2023 12:32:49 </td>
 </tr>
 
   <tr> 
      <td  align="left"> <a name="ref_trace_T2">T2</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '5260aa93-ae1c-41ad-b225-b733b7085a5a', 'RE', 'harness');">Run 2</a> </td>
-     <td  align="left"> 20-May-2023 12:08:44 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T3">T3</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '21fc58bc-8462-4c46-ac26-f237f3ba37cf', 'RE', 'harness');">Run 3</a> </td>
-     <td  align="left"> 20-May-2023 12:10:26 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T4">T4</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '2e17cdd1-d674-4436-9412-cecf5ce0cac4', 'RE', 'harness');">Run 4</a> </td>
-     <td  align="left"> 20-May-2023 12:11:35 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T5">T5</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '443ea471-524d-4eaf-a7d5-20b0cad9b33f', 'RE', 'harness');">Run 5</a> </td>
-     <td  align="left"> 20-May-2023 12:18:21 </td>
-</tr>
-
-  <tr> 
-     <td  align="left"> <a name="ref_trace_T6">T6</a> </td>
-     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '76eb986c-95fa-4f83-9e53-c82d2578c3e1', 'RE', 'harness');">Run 6</a> </td>
-     <td  align="left"> 20-May-2023 12:19:44 </td>
+     <td  align="left"> <a title="Open in Results Explorer" href="matlab: cvi.ReportUtils.reportContextCallBack('run', '1f6c3bd8-02ad-4ab6-a153-16c3da3baecd', 'RE', 'harness');">Run 9</a> </td>
+     <td  align="left"> 20-May-2023 12:37:48 </td>
 </tr>
 
 </table>
@@ -259,12 +235,12 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; false </td>
-     <td  align="center"> 129516/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 63460/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; true </td>
-     <td  align="center"> 61248/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 20416/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -279,7 +255,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -330,12 +306,12 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; false </td>
-     <td  align="center"> 162452/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 73272/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; true </td>
-     <td  align="center"> 28312/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 10604/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -350,7 +326,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -401,12 +377,12 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; false (output is from 3rd input port) </td>
-     <td  align="center"> 14442/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 4814/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; true (output is from 1st input port) </td>
-     <td  align="center"> 176322/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 79062/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -421,7 +397,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -467,7 +443,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -513,7 +489,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -559,7 +535,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -605,7 +581,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -651,7 +627,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -697,7 +673,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -743,7 +719,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -789,7 +765,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -835,7 +811,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 6/6<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 2/2<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -881,7 +857,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -927,7 +903,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -973,7 +949,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1019,7 +995,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1065,7 +1041,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1111,7 +1087,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1157,7 +1133,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1203,7 +1179,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1249,7 +1225,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1300,17 +1276,17 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; input is negative </td>
-     <td  align="center"> 61248/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 20416/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; input is zero </td>
-     <td  align="center"> 14442/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 4814/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; input is positive </td>
-     <td  align="center"> 115074/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 58646/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1325,7 +1301,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1376,17 +1352,17 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; input is negative </td>
-     <td  align="center"> 38458/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 13986/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; input is zero </td>
-     <td  align="center"> 72496/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 27915/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160; input is positive </td>
-     <td  align="center"> 79810/190764<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 41975/83876<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1401,7 +1377,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1447,7 +1423,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1493,7 +1469,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 258/258<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 115/115<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1539,7 +1515,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1585,7 +1561,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 27606/27606<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 12102/12102<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1631,7 +1607,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 6/6<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 2/2<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
@@ -1677,7 +1653,7 @@
 
   <tr> 
      <td  align="left"> &#160; &#160; &#160;  </td>
-     <td  align="center"> 6/6<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2,T3,T4,T5,T6"/><small>T1</small></a> </td>
+     <td  align="center"> 2/2<a href="#ref_trace_T1"><div  title="Executed in test(s): &#13;T1,T2"/><small>T1</small></a> </td>
 </tr>
 
 </table>
