--- a/Lab 3/Lab3_model/slcov_output/harness/CoverageDetails/docked__cov__report__harness__Normal.html
+++ b/Lab 3/Lab3_model/slcov_output/harness/CoverageDetails/docked__cov__report__harness__Normal.html
@@ -18,6 +18,8 @@
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
      <td  colspan="2">  <font size="2"> Decision</font> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  colspan="2">  <font size="2"> Condition</font> </td>
+     <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
      <td  colspan="2">  <font size="2"> Execution</font> </td>
 </tr>
 </thead>
@@ -49,6 +51,16 @@
    <td></td>
    <td>&#160;</td></tr>
 </table> </td>
+     <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  align="center">  <font size="2"> 100%</font> </td>
+     <td  align="center"> 
+<table cellpadding="0" cellspacing="0">
+<tr>
+   <td>&#160;</td>
+   <td><img src="scv_images/blue.gif" width="50" height="6" border="0"></img></td>
+   <td></td>
+   <td>&#160;</td></tr>
+</table> </td>
 </tr>
 
   <tr> 
@@ -57,8 +69,18 @@
 
   <tr> 
      <td  align="left">  <font size="2"> 1.  . . . <a href="file:////home/ale/Aleci/.home/Git/PoliTO/MBSD/Lab%203/Lab3_model/slcov_output/harness/CoverageDetails/controller_cov.html"> controller</a></font> </td>
-     <td  align="center">  <font size="2"> 34</font> </td>
+     <td  align="center">  <font size="2"> 38</font> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  align="center">  <font size="2"> 100%</font> </td>
+     <td  align="center"> 
+<table cellpadding="0" cellspacing="0">
+<tr>
+   <td>&#160;</td>
+   <td><img src="scv_images/blue.gif" width="50" height="6" border="0"></img></td>
+   <td></td>
+   <td>&#160;</td></tr>
+</table> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
      <td  align="center">  <font size="2"> 100%</font> </td>
      <td  align="center"> 
@@ -96,6 +118,8 @@
    <td>&#160;</td></tr>
 </table> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  colspan="2">  <font size="2"> --</font> </td>
+     <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
      <td  align="center">  <font size="2"> 100%</font> </td>
      <td  align="center"> 
 <table cellpadding="0" cellspacing="0">
@@ -111,6 +135,8 @@
      <td  align="left">  <font size="2"> 3.  . . . <a href="file:////home/ale/Aleci/.home/Git/PoliTO/MBSD/Lab%203/Lab3_model/slcov_output/harness/CoverageDetails/harness_cov.html"> harness</a></font> </td>
      <td  align="center">  <font size="2"> 0</font> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
+     <td  colspan="2">  <font size="2"> --</font> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
      <td  colspan="2">  <font size="2"> --</font> </td>
      <td  align="center">  <font size="2"> &#160;&#160;</font> </td>
